<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lt_bottom_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="horizontal">

    <com.animesh.dailytadkarecipes.common.customeviews.RobotoBoldTextView
        android:id="@+id/tv_home"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/selector_orange_rectangle"
        android:drawableTop="@drawable/ic_home_black_24dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/label_home"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="12sp" />

    <com.animesh.dailytadkarecipes.common.customeviews.RobotoBoldTextView
        android:id="@+id/tv_favourite"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/selector_orange_rectangle"
        android:drawableTop="@drawable/ic_favorite_border_white_24dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/label_favourite"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="12sp" />

    <com.animesh.dailytadkarecipes.common.customeviews.RobotoBoldTextView
        android:id="@+id/tv_more"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@drawable/selector_orange_rectangle"
        android:drawableTop="@drawable/ic_more_white_24dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/label_more"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:textSize="12sp" />

</LinearLayout>